# agentgym

./: .gitignore  CONTRIBUTING.md  Konzept.txt  LICENSE  Makefile  PROJECT-READY-TO-LAUNCH.md  PROJECT-SETUP-COMPLETE.md  QUICKSTART.md  README.md  SESSION_REPORT.md  WEEK-1-ISSUES.md  WEEK1_SUMMARY.md  WEEK2-3_PLAN.md  project-dashboard.html  pyproject.toml  waitlist-landing.html
.claude/: development-workflow.md  project-context.md  rules.md  session-start.md
InsightsFromDiscordChannels/: AutoGenDiscord.txt  CrewAnnouncement.txt  CrewInsightForum.txt  InsightfromMicrosoft.txt
api/: README.md  __init__.py  main.py
archive/option-b-credibility-first/: AgentEval-Tool-Specification.md  EXECUTIVE-SUMMARY-OPTION-B.md  README.md  STRATEGIC-DECISION-NEEDED.md  UPDATED-VALIDATION-TIMELINE.md  ready-to-send-dms.md
docs/architecture/: SYSTEM_DESIGN.md  TECHNICAL_APPROACH.md
docs/development/: AI_ASSISTANT_INSTRUCTIONS.md  SETUP.md  WORKFLOW.md
docs/research/: AUTOGEN-DISCORD-ANALYSIS.md  CREWAI-FORUM-ANALYSIS.md  LangChain_Community_Strategic_Analysis.md
docs/research/raw-extracts/: NewInfosAboutCustomerOtherCreator.txt  i-made-thisExtract.txt  talking-shopExtract.txt
docs/strategy/: CROSS-FRAMEWORK-STRATEGIC-SUMMARY.md  EXECUTIVE-SUMMARY.md  OPEN-CORE-COMPETITIVE-MOAT.md  OPTION-D-ACTION-PLAN.md  PROJECT-ORGANIZATION-SUMMARY.md  PROJECT-STATUS.md
docs/validation/: interview-candidates-tracking.md  interview-guide.md  outreach-templates.md
examples/: autogen_example.py  code_review_example.py  crewai_example.py  langchain_example.py
src/agentgym/: __init__.py
src/agentgym/cli/: __init__.py  main.py
src/agentgym/core/: __init__.py  config.py  result.py  trainer.py
src/agentgym/integrations/: __init__.py  autogen.py  base.py  crewai.py  langchain.py
src/agentgym/scenarios/: __init__.py  base.py  code_review.py  customer_support.py  data_analysis.py  registry.py
src/agentgym/ui/: __init__.py
tests/: test_autogen.py  test_base_adapter.py  test_cli.py  test_code_review.py  test_config.py  test_crewai.py  test_customer_support_scenario.py  test_data_analysis.py  test_langchain.py  test_result.py  test_scenario_base.py  test_scenario_registry.py  test_trainer.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.jsx
ui/src/api/: client.js
ui/src/components/: Layout.jsx
ui/src/pages/: Dashboard.jsx  Models.jsx  Scenarios.jsx  Settings.jsx  Training.jsx
